<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginStart="10dp"
                android:text="@string/dejaRevenueModel"
                android:textColor="@color/white" />
            <include
                android:id="@+id/webView_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/view_empty"
                android:layout_gravity="fill"
                android:visibility="gone"/>
            <WebView
                android:id="@+id/webView_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

<!--            <ProgressBar-->
<!--                android:id="@+id/progress"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:indeterminateTint="@color/gray"-->
<!--                android:visibility="gone"-->
<!--                tools:visibility="visible" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_background"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/standardDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:gravity="right"
                android:textColor="@color/gray"
                tools:ignore="RtlHardcoded" />
            <TextView
                android:id="@+id/market"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:textColor="@color/white" />
            <TextView
                android:id="@+id/closePrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="26sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/beforeRatio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textSize="18sp"
                android:textColor="#ff0000" />
            <TextView
                android:id="@+id/marketStatusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="405dp"
            android:layout_marginTop="30dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/layout_background"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/recycler_list"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="192dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/todayMarketStatus"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/marketStatus"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:maxWidth="140dip"
        android:layout_marginTop="230dp"
        android:padding="20dp"
        android:contentDescription="@string/marketStatusImage"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/top5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="35dp"
        android:layout_marginTop="395dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/top5"
        android:textColor="@color/white" />
    </FrameLayout>
</androidx.core.widget.NestedScrollView>